Add files from template

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 test-default-obsidian-colors.css
-theme.css.map
+
+# vscode
+.vscode 
+
+# Intellij
+*.iml
+.idea
+
+# npm
+node_modules
+
+# Exclude sourcemaps
+*.map
+
+# Exclude macOS Finder (System Explorer) View States
+.DS_Store
