--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,7 +8,9 @@ name: Deploy Jekyll site to Pages
 
 on:
   push:
-    branches: ["doc"]
+    branches:
+      - "main"
+      - "doc"
     paths:
       - "docs/**"
   
