--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-    "name": "fancy-a-story-obsidian-theme",
-    "version": "1.0.0",
+	"name": "fancy-a-story-obsidian-theme",
+	"version": "1.0.0",
 	"scripts": {
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"postcss:watch": "postcss css/ --dir postcss/ --base css/ --watch"
+	},
+	"devDependencies": {
+		"css-byebye": "^4.0.1",
+		"postcss": "^8.4.47",
+		"postcss-cli": "^11.0.0",
+		"postcss-remove-selectors": "^2.0.1"
 	}
 }
