Include publish.css in the release

--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -22,4 +22,4 @@ jobs:
             --title="$tag" \
             --generate-notes \
             --draft \
-            manifest.json theme.css
+            manifest.json theme.css publish.css
