--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"scripts": {
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"postcss:snippets": "postcss css/ --dir snippets/ --base css/ --plugins=snippets",
-		"postcss:publish": "postcss publish-raw.css --output publish.css --plugins=publish",
-		"postcss:theme": "postcss theme-raw.css --output theme.css --watch --plugins=theme"
+		"postcss:publish": "postcss publish-raw.css --output publish.css --watch --plugins=publish",
+		"postcss:theme": "postcss theme-raw.css --output theme.css --watch --plugins=theme",
+		"postcss:hongkong": "postcss publish-hong-kong.css --output publish-hk.css --plugins=publish"
 	},
 	"devDependencies": {
 		"css-byebye": "^4.0.1",
