Positionning of the banner

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,3 +7,5 @@ gem "just-the-docs", "0.10.0" # pinned to the current release
 # gem "just-the-docs"        # always download the latest release
 
 gem "jekyll-default-layout"
+gem "csv"
+gem "base64"
